# full-text-search

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  books.csv  default.xml
cmake/: CompileOptions.cmake
include/ConfigParser/: ConfigParser.hpp
include/Filter/: Filter.hpp
include/IndexAccessor/: IndexAccessor.hpp  TextIndexAccessor.hpp
include/Indexer/: Index.hpp  IndexBuilder.hpp  IndexWriter.hpp  TextIndexWriter.hpp
include/NgramParser/: NgramParser.hpp
include/Searcher/: Result.hpp  Searcher.hpp
include/libmath/: sum.h
src/: CMakeLists.txt
src/ConfigParser/: CMakeLists.txt  ConfigParser.cpp
src/Filter/: CMakeLists.txt  Filter.cpp
src/Indexer/: CMakeLists.txt  IndexBuilder.cpp  IndexBuilder.test.cpp  TextIndexWriter.cpp
src/Searcher/: CMakeLists.txt  Result.cpp  Searcher.cpp
src/TextIndexAccessor/: CMakeLists.txt  TextIndexAccessor.cpp
src/common/: CMakeLists.txt  NgramParser.cpp  NgramParser.test.cpp
src/fts-csl/: CMakeLists.txt  main.cpp
src/libmath/: CMakeLists.txt  sum.cpp  sum.test.cpp
src/sum-cli/: CMakeLists.txt  main.cpp
